<resources>
    <string name="default_chip_color">#ff2b7fc2</string>
    <string name="app_name">JKU App</string>
    <string name="title_oeh_news">ÖH News</string>
    <string name="title_oeh_linz">ÖH Linz</string>
    <string name="title_kusss">KUSSS</string>
    <string name="title_mensa">Mensa</string>
    <string name="title_events">Veranstaltungen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_refresh">Aktualisieren</string>
    <string name="action_changelog">Change Log</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_settings_summary">Einstellungen von KUSSS, Benachrichtigungen, &#8230;</string>
    <string name="action_snap_to_location">TODO: snap to location</string>
    <string name="grade_1">Sehr gut</string>
    <string name="grade_2">Gut</string>
    <string name="grade_3">Befriedigend</string>
    <string name="grade_4">Genügend</string>
    <string name="grade_5">Nicht genügend</string>
    <string name="grade_type_interim_ca">Vorläufige Lehrveranstaltungsbeurteilungen</string>
    <string name="grade_type_final_ca">Lehrveranstaltungsbeurteilungen</string>
    <string name="grade_type_recognized_cc">Sonstige Beurteilungen</string>
    <string name="grade_type_recognized_a">Anerkannte Beurteilungen</string>
    <string name="grade_type_recognized_exam">Anerkannte Prüfungen</string>
    <string name="grade_type_final_exam">Prüfungen</string>
    <string name="grade_type_unknown">TODO</string>
    <string name="grade_type_all">alle Beurteilungen</string>
    <string name="grade_unknown">Nicht bewertet</string>
    <string name="notification_sync_running">Daten werden synchronisiert</string>
    <string name="notification_sync_calendar">Termine werden synchronisiert</string>
    <string name="notification_sync_exam">Prüfungen werden synchronisiert</string>
    <string name="notification_sync_grade">Noten werden synchronisiert</string>
    <string name="notification_sync_lva">LVAs werden synchronisiert</string>
    <string name="notification_events_changed_title" formatted="false">Termin(e) in "%s" geändert</string>
    <string name="notification_events_changed" formatted="false">%d Termin(e) in "%s" geändert</string>
    <string name="notification_new_exams_title">neue Prüfung(en) gefunden</string>
    <string name="notification_new_exams" formatted="false">%d neue Prüfung(en) gefunden</string>
    <string name="notification_grades_changed_title">neue Note(n) verfügbar</string>
    <string name="notification_grades_changed" formatted="false">%d neue Note(n) verfügbar</string>
    <string name="notification_poi_changed_title">neue Orte verfügbar</string>
    <string name="notification_poi_changed" formatted="false">%d neue Orte verfügbar</string>
    <string name="pref_cat_sync_settings">Einstellungen bearbeiten</string>
    <string name="pref_cat_update_password">Passwort aktualisieren</string>
    <string name="pref_cat_kusss_main">KUSSS</string>
    <string name="pref_cat_app_main">App</string>
    <string name="pref_cat_app_map">Karte</string>
    <string name="pref_cat_diagrams">Diagramme</string>
    <string name="pref_kusss_user_title">MatrikelNr</string>
    <string name="pref_kusss_pw_title">Passwort</string>
    <string name="pref_kusss_sync_title">Synchronisieren</string>
    <string name="pref_kusss_sync_interval_title">Intervall</string>
    <string name="pref_kusss_sync_interval_summary">Intervall in dem die Daten synchronisiert werden</string>
    <string name="pref_kusss_notify_title">Benachrichtigen</string>
    <string name="pref_cat_kusss_calendar">Stundenplan</string>
    <string name="pref_kusss_calendar_sync_summary">Alle LVA-Termine vom aktuellen Semester synchronisieren</string>
    <string name="pref_kusss_calendar_notify_summary">Benachrichtigen wenn sich Termine geändert haben</string>
    <string name="pref_cat_kusss_grade">Noten</string>
    <string name="pref_kusss_grade_sync_summary">Noten synchronisieren</string>
    <string name="pref_kusss_grade_notify_summary">Benachrichtigen wenn neue Noten vorhanden sind</string>
    <string name="pref_cat_kusss_exam">Prüfungen</string>
    <string name="pref_kusss_exam_sync_summary">LVA-Prüfungen synchronisieren</string>
    <string name="pref_kusss_exam_notify_summary">Benachrichtigen wenn neue LVA-Prüfungen zu den eigenen LVAs verfügbar sind</string>
    <string name="pref_app_use_light_theme_summary">Das Ändern dieser Einstellung startet die App neu</string>
    <string name="pref_app_use_light_theme_title">helles Design verwenden</string>
    <string name="pref_app_map_file_title">eigene Kartendatei</string>
    <string name="pref_diagrams_use_lva_bar_chart_summary">Barchart für offene und erledigte LVAs verwenden</string>
    <string name="pref_diagrams_use_lva_bar_chart_title">Diagrammtyp für LVAs</string>
    <string name="search_poi_title">Suche</string>
    <string name="search_poi_hint">Hörsaal hier eingeben</string>
    <string name="group_user">User</string>
    <string name="group_oeh">ÖH</string>
    <string name="group_kusss">KUSSS</string>
    <string name="group_other">Sonstiges</string>
    <string name="settings_kusss_title">KUSSS</string>
    <string name="settings_kusss_summary">Einstellungen für KUSSS</string>
    <string name="settings_app_title">App</string>
    <string name="settings_app_summary">Einstellungen für App</string>
    <string name="drawer_menu_item_icon">Icon</string>
    <string name="about_app_summary">Das ist der Versuch eine neue und aktuellere JKU-, KUSSS- bzw. OEH- App zu erstellen.</string>
    <string name="about_me_title">Über mich</string>
    <string name="about_me_summary">Paul Pretsch\n<a href="mailto:paul.pretsch@aon.at">paul.pretsch@aon.at</a></string>
    <string name="used_lib_title">verwendete Bibliotheken</string>
    <string name="used_lib_summary"><a href="http://www.mapsforge.org">MapsForge</a>\n\n<a href="http://ical4j.sourceforge.net">ICal4j</a>\n\n<a href="http://jsoup.org/">jSoup</a>\n\n<a href="https://github.com/cketti/ckChangeLog">ckChangeLog</a>\n\n<a href="http://androidplot.com/">Androidplot</a></string>
    <string name="oeh_info_main_title">Deine ÖH</string>
    <string name="oeh_info_main_summary">Die Österreichische Hochschülerinnen- und Hochschülerschaft ist die gesetzliche Vertretung aller Studierenden. Sie gliedert sich bundesweit in die ÖH-Bundesvertretung (<a href="http://www.oeh.ac.at/">http://www.oeh.ac.at/</a>), in die Universitätsvertretungen an den einzelnen Universitäten, wie beispielsweise die HochschülerInnenschaft an der Johannes Kepler Universität Linz (<a href="http://oeh.jku.at/">http://oeh.jku.at</a>).(</string>
    <string name="oeh_info_jku_title">Deine ÖH an der JKU</string>
    <string name="oeh_info_jku_summary">An der Johannes Kepler Universität besteht die ÖH aus der Universitätsvertretung, den zugeordneten Referaten, wie beispielsweise dem ÖH Sozialreferat, den Fakultätsvertretungen und den Studienvertretungen. Unsere Aufgabenfelder sind Beratung, Information, Service und Vertretung. In diesem Sinne stehen wir dir bei Problemen im Studium mit Rat und Tat zur Seite, informieren dich über aktuelle Ereignisse an der Universität und vertreten die Studierenden in den Gremien der Universität.</string>
    <string name="oeh_info_contact_title">Kontakt</string>
    <string name="oeh_info_contact_summary">Wenn du Fragen und Anregungen hast, kannst du dich jederzeit unter <a href="mailto:oeh@oeh.jku.at">oeh@oeh.jku.at</a> an uns wenden!</string>
    <string name="oeh_rights_1_title">Deine Rechte und Pflichten</string>
    <string name="oeh_rights_1_summary">Studierende an der JKU haben bestimmte Rechte und Pflichten. Das Studienrecht ist im Universitätsgesetz (UG 2002) und in der Satzung der JKU (Studienrecht) geregelt.</string>
    <string name="oeh_rights_2_title">Was passiert wenn ich beim Schummeln erwischt werde?</string>
    <string name="oeh_rights_2_summary">Wenn du unerlaubte Hilfsmittel benützt, wird deine Prüfung für ungültig erklärt und auf deine Antrittsmöglichkeiten angerechnet. Das bedeutet, dass du dadurch einen Antritt verspielen kannst.</string>
    <string name="oeh_rights_3_title">Wie lange darf ich in schriftliche Klausuren Einsicht nehmen?</string>
    <string name="oeh_rights_3_summary">Du hast das Recht innerhalb von sechs Monaten nach Ablegung einer Prüfung in deine Arbeit Einsicht zu nehmen. Weiters darfst du jede von dir abgelegte Prüfung inkl. Beurteilungsunterlagen und Prüfungsprotokolle kopieren (außer bei Multiple-Choice Klausuren).</string>
    <string name="oeh_rights_4_title">Ist die Festlegung einer höheren Mindestpunktezahl als 50% bei Klausuren zulässig?</string>
    <string name="oeh_rights_4_summary">Ja. Grundsätzlich obliegt es dem/der LVA-LeiterIn den Schwierigkeitsgrad und die Mindestanforderungen für eine positive Absolvierung festzulegen, sofern im Studienplan keine abweichenden Bestimmungen enthalten sind.</string>
    <string name="oeh_rights_5_title">Wie oft darf ich eine LVA wiederholen?</string>
    <string name="oeh_rights_5_summary">Bei allen Prüfungen hast du 4 Wiederholungen, d.h. insgesamt 5 Antritte. Prüfungstechnisch gibt es zwei unterschiedliche Kursformen. Einerseits solche mit "immanentem Prüfungscharakter", d.h. die Note setzt sich aus mehreren Leistungsprüfungen wie z.B. Hausübungen zusammen. Hier kannst du ab der dritten Wiederholung eine kommissionelle Prüfung verlangen; dein Antrag muss vom Vizerektor für Lehre genehmigt werden. Bei allen anderen LVAs und Fachprüfungen muss ab der dritten Wiederholung eine kommissionelle Prüfung abgehalten werden. Kommissionelle Prüfungen sind vom Modus her meist gleich, werden aber von mehreren ProfessorInnen beurteilt. Bei positiven Prüfungen ist eine Wiederholung innerhalb von 6 Monaten möglich, wenn du eine bessere Note haben willst.</string>
    <string name="oeh_rights_6_title">Links</string>
    <string name="oeh_rights_6_summary"><a href="http://www.jku.at/content/e262/e239/e3257">Detaillierte Informationen zum Studienrecht der JKU</a>\n\n<a href="http://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&amp;Gesetzesnummer=20002128">Das Universitätsgesetz</a></string>
    <string name="kusss_service_title">KUSSS Service</string>
    <string name="sign_in">Einloggen</string>
    <string name="kusss_provider_name">KUSSS</string>
    <string name="poi_provider_name">POIs</string>
    <string name="notification_error">"JKU App" Fehler</string>
    <string name="notification_error_account_is_null">kein Account vorhanden</string>
    <string name="notification_error_account_not_available">Account konnte nicht validiert werden</string>
    <string name="progress_title">Bitte warten...</string>
    <string name="progress_load_menu">Menüs werden geladen...</string>
    <string name="progress_load_exam">Prüfungen werden geladen...</string>
    <string name="progress_load_grade">Noten werden geladen...</string>
    <string name="progress_load_lva">LVAs werden geladen...</string>
    <string name="progress_load_calendar">Termine werden geladen...</string>
    <string name="progress_load_map_files">Karten werden geladen...</string>
    <string name="progress_login">Einloggen...</string>
    <string name="listview_footer_button">Mehr...</string>
    <string name="pref_kusss_exam_get_from_lva_title">Prüfungen nach LVA-Nr laden</string>
    <string name="pref_kusss_exam_get_from_lva_summary">findet Prüfungen zu LVAs auch aus früheren Semestern, ist dafür aber langsamer ...</string>
    <string name="extension_mensa_title">Mensa</string>
    <string name="extension_mensa_description">Zeige das Menü der ausgewählten Mensa für den heutigen Tag an</string>
    <string name="lva_done">abgeschlossene LVAs</string>
    <string name="lva_open">offene LVAs</string>
    <string name="lva_all">alle LVAs</string>
</resources>