<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.voidsink.anewjkuapp.fragment.AboutFragment" >

    <ScrollView
        android:id="@+id/about_content_scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/about_changelog"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/about_app_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/about_app"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/about_app_summary"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/about_me_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/about_me_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/about_me"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:linksClickable="false"
                android:padding="5dp"
                android:text="@string/about_me_summary"
                android:textAppearance="?android:attr/textAppearanceSmall" >
            </TextView>
            <TextView
                android:id="@+id/used_lib_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/used_lib_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/used_lib"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/used_lib_summary"
                android:textAppearance="?android:attr/textAppearanceSmall" >
            </TextView>
            </LinearLayout>
    </ScrollView>

    <Button
        android:id="@id/about_changelog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:onClick="onClickChangeLog"
        android:padding="10dp"
        android:text="@string/action_changelog" />

</RelativeLayout>